# segmenthreetion

./: .gitignore  BackgroundSubtractor.cpp  BackgroundSubtractor.h  CMakeLists.txt  ColorBackgroundSubtractor.cpp  ColorBackgroundSubtractor.h  ColorFeatureExtractor.cpp  ColorFeatureExtractor.h  ColorParametrization.cpp  ColorParametrization.h  ColorParametrization.hpp  CvExtraTools.cpp  CvExtraTools.h  DebugTools.cpp  DebugTools.h  DepthBackgroundSubtractor.cpp  DepthBackgroundSubtractor.h  DepthFeatureExtractor.cpp  DepthFeatureExtractor.h  DepthParametrization.cpp  DepthParametrization.h  DepthParametrization.hpp  FeatureExtractor.cpp  FeatureExtractor.h  ForegroundParametrization.hpp  FusionPrediction.cpp  FusionPrediction.h  GridMapWriter.cpp  GridMapWriter.h  GridMat.cpp  GridMat.h  GridPartitioner.cpp  GridPartitioner.h  GridPredictor.cpp  GridPredictor.h  ModalityData.hpp  ModalityGridData.hpp  ModalityPrediction.cpp  ModalityPrediction.h  ModalityPredictor  (+46 more)
Debug/: segmenthreetion
segmenthreetion.build/Debug/segmenthreetion.build/: segmenthreetion.dep  segmenthreetion~.dep
segmenthreetion.build/Debug/segmenthreetion.build/Objects-normal/x86_64/: BackgroundSubtractor.d  ColorBackgroundSubtractor.d  ColorBackgroundSubtractor.dia  ColorFeatureExtractor.d  ColorFeatureExtractor.dia  DebugTools.d  DepthBackgroundSubtractor.d  DepthBackgroundSubtractor.dia  DepthFeatureExtractor.d  DepthFeatureExtractor.dia  FeatureExtractor.d  GridMat.d  GridMat.dia  GridPartitioner.d  GridPredictor.d  GridPredictor.dia  ModalityPrediction.d  ModalityPrediction.dia  ModalityReader.d  (+20 more)
